--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes gradient-text-animation {
+	0% {
+		background-position: 0% center;
+	}
+	100% {
+		background-position: -200% center;
+	}
+}
+
+.gradient-span {
+	background-size: 200%;
+	background-image: linear-gradient(to right, #1c7ed6, #4dabf7, #339af0, #1c7ed6);
+	animation: gradient-text-animation 4s infinite linear;
+}
